--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Taller1"
         tools:targetApi="31">
         <activity
+            android:name=".formulario_1"
+            android:exported="false" />
+        <activity
             android:name=".Inicarsesion_activity"
             android:exported="false" />
         <activity
